# Kurs_project_1

./: .coverage  .env_template  .flake8  .gitignore  README.md  main.py  mypy.ini  pyproject.toml  workday_spending_report.json
src/: __init__.py  config.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
