[tool.poetry]
name = "bank-transactions-analysis"
version = "0.1.0"
description = "Application for bank transactions analysis"
authors = ["Rezilya Stolyarova <rezilek@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.0"
openpyxl = "^3.0.9"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.14.0"
pytest-cov = "^4.1.0"
mypy = "^1.10.0"
flake8 = "^6.0.0"
importlib-metadata = "5.2.0"
types-requests = "^2.31.0"
pandas-stubs = "^2.2.0.3"
types-python-dateutil = "^2.8.19"
types-pytz = "^2023.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
